Fix alignment

--- a/css/cover.sass
+++ b/css/cover.sass
@@ -323,7 +323,7 @@ body
   h3
     margin: 10px 10px 10px
     font-size: 30px
-    text-align: left
+    text-align: right
   h4
     margin-top: 30px
     font-size: 25px
